--- a/subject.html
+++ b/subject.html
@@ -3,13 +3,19 @@
 <html lang="en">
   
   <head>
-    <title>True Beauty K-Drama</title>
+    <title>True Beauty</title>
   </head>
 
   <body>
-    <h1>True Beauty</h1>
-    <li>Lim Jugyeong</li>
-    <ul>Lee Suho</ul>
+    <h1>True Beauty Main Characters</h1>
+    <ul>
+      <li>Jugyeong Lim</li>
+      <li>Suho Lee</li>
+      <li>Seojun Han</li>
+    </ul>
+    <h2>Jugyeong Lim</h2>
+    <h2>Suho Lee</h2>
+    <h2>Seojun Han</h2>
   </body>
 
 </html>
