--- a/subject.html
+++ b/subject.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <h1>True Beauty Main Characters</h1>
+    <h1>True Beauty K-Drama Main Characters</h1>
     <ul>
       <li>Jugyeong Lim</li>
       <li>Suho Lee</li>
