--- a/subject.html
+++ b/subject.html
@@ -4,7 +4,7 @@
   
   <head>
     <title>True Beauty</title>
-    <link href="style.css" rel="stylesheet">
+    <link href="style0.css" rel="stylesheet">
   </head>
 
   <body>
