--- a/final.html
+++ b/final.html
@@ -10,7 +10,7 @@
 	<h1> Hangman </h1>
 	<h4>A project by Emily Ortiz [PD5], Tanzina Sumona [PD5], and Anna Fang [PD5] </h4>
 	<br>
-	<li><a href="https://annafang30.github.io/web/finalpage2.html"> link to our Hangman DATA + GRAPHS  for analysis :)</a></li>
+	<li><a href="https://eortiz-30.github.io/web/finalpage2.html"> link to our Hangman DATA + GRAPHS  for analysis :)</a></li>
 	<br>
 	<h2> Project Description </h2>
 	<p> This is a recreation of the game Hangman, where players are given an unknown word and guess the letters that make it up, in Python. Players will have 9 lives to guess the letters in a random word or phrase through inputs in Thonny’s shell. Every wrong guess is followed by a hangman drawing and graphs will be shown when the player ends the game. </p>
