--- a/finalpage2.html
+++ b/finalpage2.html
@@ -10,7 +10,7 @@
 <body>
 	<h1> Graphs and Data </h1>
 	<br>
-	<li><a href="https://annafang30.github.io/web/final.html"> Back to our main information page! </a></li>
+	<li><a href="https://eortiz-30.github.io/web/final.html"> Back to our main information page! </a></li>
 	<br>
 
 	<body>
